# Motion-detect-parallel

./: .gitignore  CMakeLists.txt  README.md
